crates/ferrum-interfaces/tests/ui/vnext/fail/active_sequence_blocks_runtime_reassignment.stderr
warning: value assigned to `stream` is never read
 --> tests/ui/vnext/fail/active_sequence_blocks_runtime_reassignment.rs:9:5
  |
9 |     stream = replacement;
  |     ^^^^^^
  |
  = help: maybe it is overwritten before being read?
  = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

error[E0506]: cannot assign to `stream` because it is borrowed
  --> tests/ui/vnext/fail/active_sequence_blocks_runtime_reassignment.rs:9:5
   |
 8 |     let permit = resources.activate(&mut stream).unwrap();
   |                                     ----------- `stream` is borrowed here
 9 |     stream = replacement;
   |     ^^^^^^ `stream` is assigned to here but it was already borrowed
10 |     drop(permit);
   |          ------ borrow later used here
